--- a/1_1_zhigong5.html
+++ b/1_1_zhigong5.html
@@ -37,7 +37,7 @@
 
             <div class=" bodypart">
               <p class="desc typing-ani">
-                <span class="text">集团公司工会坚持把企业文化建设作为凝心聚力的抓手，不断充实企业文化内涵和外延的品牌符号，积极组织开展“读书月”、“安康杯”、“徒步大会”“三八才艺大赛”等形式多样、丰富多彩的文体生活，打造具有铁越特色的企业文化亮点，展示了“铁越人”劈波斩浪、朝气蓬勃的精神风貌。
+                <span class="text">集团公司工会坚持把企业文化建设作为凝心聚力的抓手，不断充实企业文化内涵和外延的品牌符号，积极组织开展“读书月”、“安康杯”、“徒步大会”“三八才艺大赛”等形式多样、丰富多彩的文体活动，打造具有铁越特色的企业文化亮点，展示了“铁越人”劈波斩浪、朝气蓬勃的精神风貌。
                 </span>
               </p>
             </div>
@@ -68,14 +68,14 @@
                   <div class="swiper-slide">	<img src="images/zhigong5/i1.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/zhigong5/i2.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/zhigong5/i3.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/zhigong5/i7.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/zhigong5/i4.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/zhigong5/i12.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/zhigong5/i10.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/zhigong5/i5.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/zhigong5/i6.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong5/i7.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/zhigong5/i8.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong5/i10.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/zhigong5/i11.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong5/i12.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/zhigong5/i9.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/zhigong5/i1.jpg">	</div>
                 </div>
