--- a/culture_5.html
+++ b/culture_5.html
@@ -27,20 +27,147 @@
 			</div>
 		</div>
 
-		<div class="main">
-			<div class="main-content video-list">
-				<div class="video-thumb">
-  					<div class="image" > <a href="javascript:void(0)" class="play-btn">    <img src="videos/fengcai/感动铁越.jpg"></a>
-    					<video class="video-js  vjs-hidden" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-    					  <source src="videos/fengcai/01感动铁越.webm" type="video/webm"/>
-    					</video>
-  					</div>
-  					<div class="title">感动铁越</div>
-				</div>
-			</div>
-		</div>
-
+    <div class="main">
+        <div class="main-content video-list">
+            <div class="video-thumb">
+                <div class="image">
+                    <a href="javascript:void(0)" class="play-btn">
+                        <img src="videos/fengcai/感动铁越.jpg" class="img-fullw">
+                    </a>
+                    <div class="video-wrap">
+                        <video class="video-js  vjs-hidden" data-setup="{&quot;controls&quot;: true, &quot;autoplay&quot;: false, &quot;preload&quot;: &quot;auto&quot;, &quot;fluid&quot;: true}">
+                            <source src="videos/fengcai/01感动铁越.webm" type="video/webm">
+                        </video>
+                    </div>
+                </div>
+                <div class="title">
+                    感动铁越
+                </div>
+            </div>
+            <div class="video-thumb">
+                <div class="image">
+                    <a href="javascript:void(0)" class="play-btn">
+                        <img src="videos/fengcai/铁越速度.jpg" class="img-fullw">
+                    </a>
+                    <div class="video-wrap">
+                        <video class="video-js  vjs-hidden" data-setup="{&quot;controls&quot;: true, &quot;autoplay&quot;: false, &quot;preload&quot;: &quot;auto&quot;, &quot;fluid&quot;: true}">
+                            <source src="videos/fengcai/02铁越速度.webm" type="video/webm">
+                        </video>
+                    </div>
+                </div>
+                <div class="title">
+                    铁越速度
+                </div>
+            </div>
+            <div class="video-thumb">
+                <div class="image">
+                    <a href="javascript:void(0)" class="play-btn">
+                        <img src="videos/fengcai/拓荒者的足迹.jpg" class="img-fullw">
+                    </a>
+                    <div class="video-wrap">
+                        <video class="video-js  vjs-hidden" data-setup="{&quot;controls&quot;: true, &quot;autoplay&quot;: false, &quot;preload&quot;: &quot;auto&quot;, &quot;fluid&quot;: true}">
+                            <source src="videos/fengcai/03拓荒者的足迹.webm" type="video/webm">
+                        </video>
+                    </div>
+                </div>
+                <div class="title">
+                    拓荒者的足迹
+                </div>
+            </div>
+            <div class="video-thumb">
+                <div class="image">
+                    <a href="javascript:void(0)" class="play-btn">
+                        <img src="videos/fengcai/2017年三八才艺.jpg" class="img-fullw">
+                    </a>
+                    <div class="video-wrap">
+                        <video class="video-js  vjs-hidden" data-setup="{&quot;controls&quot;: true, &quot;autoplay&quot;: false, &quot;preload&quot;: &quot;auto&quot;, &quot;fluid&quot;: true}">
+                            <source src="videos/fengcai/2017年三八才艺.webm" type="video/webm">
+                        </video>
+                    </div>
+                </div>
+                <div class="title">
+                    2017年三八才艺
+                </div>
+            </div>
+            <div class="video-thumb">
+                <div class="image">
+                    <a href="javascript:void(0)" class="play-btn">
+                        <img src="videos/fengcai/2016年三八才艺.jpg" class="img-fullw">
+                    </a>
+                    <div class="video-wrap">
+                        <video class="video-js  vjs-hidden" data-setup="{&quot;controls&quot;: true, &quot;autoplay&quot;: false, &quot;preload&quot;: &quot;auto&quot;, &quot;fluid&quot;: true}">
+                            <source src="videos/fengcai/052016年三八才艺展示.webm" type="video/webm">
+                        </video>
+                    </div>
+                </div>
+                <div class="title">
+                    2016年三八才艺
+                </div>
+            </div>
+            <div class="video-thumb">
+                <div class="image">
+                    <a href="javascript:void(0)" class="play-btn">
+                        <img src="videos/fengcai/2015年三八才艺.jpg" class="img-fullw">
+                    </a>
+                    <div class="video-wrap">
+                        <video class="video-js  vjs-hidden" data-setup="{&quot;controls&quot;: true, &quot;autoplay&quot;: false, &quot;preload&quot;: &quot;auto&quot;, &quot;fluid&quot;: true}">
+                            <source src="videos/fengcai/062015年三八才艺展示.webm" type="video/webm">
+                        </video>
+                    </div>
+                </div>
+                <div class="title">
+                    2015年三八才艺
+                </div>
+            </div>
+            <div class="video-thumb">
+                <div class="image">
+                    <a href="javascript:void(0)" class="play-btn">
+                        <img src="videos/fengcai/两学一做-白总.jpg" class="img-fullw">
+                    </a>
+                    <div class="video-wrap">
+                        <video class="video-js  vjs-hidden" data-setup="{&quot;controls&quot;: true, &quot;autoplay&quot;: false, &quot;preload&quot;: &quot;auto&quot;, &quot;fluid&quot;: true}">
+                            <source src="videos/fengcai/07两学一做-白总.webm" type="video/webm">
+                        </video>
+                    </div>
+                </div>
+                <div class="title">
+                    两学一做-白总
+                </div>
+            </div>
+            <div class="video-thumb">
+                <div class="image">
+                    <a href="javascript:void(0)" class="play-btn">
+                        <img src="videos/fengcai/于志斌讲课.jpg" class="img-fullw">
+                    </a>
+                    <div class="video-wrap">
+                        <video class="video-js  vjs-hidden" data-setup="{&quot;controls&quot;: true, &quot;autoplay&quot;: false, &quot;preload&quot;: &quot;auto&quot;, &quot;fluid&quot;: true}">
+                            <source src="videos/fengcai/08于志斌讲课.webm" type="video/webm">
+                        </video>
+                    </div>
+                </div>
+                <div class="title">
+                    于志斌讲课
+                </div>
+            </div>
+            <div class="video-thumb">
+                <div class="image">
+                    <a href="javascript:void(0)" class="play-btn">
+                        <img src="videos/fengcai/王建臣讲课.jpg" class="img-fullw">
+                    </a>
+                    <div class="video-wrap">
+                        <video class="video-js  vjs-hidden" data-setup="{&quot;controls&quot;: true, &quot;autoplay&quot;: false, &quot;preload&quot;: &quot;auto&quot;, &quot;fluid&quot;: true}">
+                            <source src="videos/fengcai/09王建臣讲课.webm" type="video/webm">
+                        </video>
+                    </div>
+                </div>
+                <div class="title">
+                    王建臣讲课
+                </div>
+            </div>
+        </div>
     </div>
+
+  </div>
 
 	<nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
 	  <div class="container">
