青春风采-2次修改

--- a/1_jiandang.html
+++ b/1_jiandang.html
@@ -34,7 +34,7 @@
               <a href="1_1_zhigong1.html" class="culture_btn4">  </a>
             </div>
             <div class="col-md-4">
-              <a href="" class="party_btn4"> </a>
+              <a href="1_1_qingchun.html" class="party_btn4"> </a>
             </div>
 
         </div>
