--- a/1_1_qingchun2.html
+++ b/1_1_qingchun2.html
@@ -20,10 +20,7 @@
         <div class="logo"><img src="./images/tdc_logo.png"></div>
         <div class="row" id="zlogo">
             <div class="col-md-4"></div>
-            <div class="col-md-4">
-                <img src="./images/zhigong/zhilist_02.png"> <span style="position: absolute;text-align: center"><h1>
-                青春风采</h1></span>
-            </div>
+            <div class="col-md-4"><img src="./images/qingchun/qingchun-log.png"></div>
             <div class="col-md-4"></div>
         </div>
     </div>
