青春风采-3次修改

--- a/1_1_qingchun2.html
+++ b/1_1_qingchun2.html
@@ -38,11 +38,11 @@
                         </div>
                         <div class="row">
                             <div class="col-md-3">
-                                <a href="images/qingchun2/i3.jpg" data-lightbox="lightbox">
+                                <a href="images/qingchun2/i1.jpg" data-lightbox="lightbox">
                                     <img src="./images/qingchun2/i1s.jpg" class="" style=" "></a>
                             </div>
                             <div class="col-md-3">
-                                <a href="images/qingchun2/i3.jpg" data-lightbox="lightbox">
+                                <a href="images/qingchun2/i2.jpg" data-lightbox="lightbox">
                                     <img src="./images/qingchun2/i2s.jpg" class="" style=" "></a>
                             </div>
                             <div class="col-md-3">
@@ -50,50 +50,50 @@
                                     <img src="./images/qingchun2/i3s.jpg" class="" style=" "></a>
                             </div>
                             <div class="col-md-3">
-                                <a href="images/qingchun2/i3.jpg" data-lightbox="lightbox">
+                                <a href="images/qingchun2/i4.jpg" data-lightbox="lightbox">
                                     <img src="./images/qingchun2/i4s.jpg" class="" style=" "></a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-3">
-                                <a href="images/qingchun2/i3.jpg" data-lightbox="lightbox">
+                                <a href="images/qingchun2/i5.jpg" data-lightbox="lightbox">
                                     <img src="./images/qingchun2/i5s.jpg" class="" style=" "></a>
                             </div>
                             <div class="col-md-3">
-                                <a href="images/qingchun2/i3.jpg" data-lightbox="lightbox">
+                                <a href="images/qingchun2/i6.jpg" data-lightbox="lightbox">
                                     <img src="./images/qingchun2/i6s.jpg" class="" style=" "></a>
                             </div>
                             <div class="col-md-3">
-                                <a href="images/qingchun2/i3.jpg" data-lightbox="lightbox">
+                                <a href="images/qingchun2/i7.jpg" data-lightbox="lightbox">
                                     <img src="./images/qingchun2/i7s.jpg" class="" style=" "></a>
                             </div>
                             <div class="col-md-3">
-                                <a href="images/qingchun2/i3.jpg" data-lightbox="lightbox">
+                                <a href="images/qingchun2/i8.jpg" data-lightbox="lightbox">
                                     <img src="./images/qingchun2/i8s.jpg" class="" style=" "></a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-3">
-                                <a href="images/qingchun2/i3.jpg" data-lightbox="lightbox">
+                                <a href="images/qingchun2/i9.jpg" data-lightbox="lightbox">
                                     <img src="./images/qingchun2/i9s.jpg" class="" style=" "></a>
                             </div>
                             <div class="col-md-3">
-                                <a href="images/qingchun2/i3.jpg" data-lightbox="lightbox">
+                                <a href="images/qingchun2/i10.jpg" data-lightbox="lightbox">
                                     <img src="./images/qingchun2/i10s.jpg" class="" style=" "></a>
                             </div>
                         </div>
                         <div class="swiper swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide"><img src="images/tdc6/i1.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tdc6/i2.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tdc6/i4.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tdc6/d-04.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tdc6/d-05.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tdc6/d-01.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tdc6/i3.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tdc6/d-02.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tdc6/d-06.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tdc6/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i4.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i5.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i6.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i7.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i8.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i9.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i10s.jpg"></div>
                             </div>
                         </div> <!--swiper end-->
                     </div> <!--col-md-10 end-->
@@ -112,12 +112,12 @@
 
 <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
     <div class="content">
-        <!--<div class="col-md-3 leftpart">-->
-        <!--<a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >-->
-        <!--<span class="glyphicon glyphicon-film" aria-hidden="true"></span>-->
-        <!--<span>		视频 </span>-->
-        <!--</a>-->
-        <!--</div>-->
+        <div class="col-md-3 leftpart">
+            <!--<a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">-->
+                <!--<span class="glyphicon glyphicon-film" aria-hidden="true"></span>-->
+                <!--<span>		视频 </span>-->
+            <!--</a>-->
+        </div>
 
         <div class="col-md-9 rightpart">
             <div class="pull-right">
