修正青春2 滚动

--- a/1_1_qingchun2.html
+++ b/1_1_qingchun2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>青春风采</title>
+    <title> 团组织建设 - 青春风采 - 铁越集团</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
@@ -15,7 +15,7 @@
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<div class="page zhigong1 tdc-detail">
+<div class="page qingchun2 tdc-detail">
     <div class="container">
         <div class="logo"><img src="./images/tdc_logo.png"></div>
         <div class="row" id="zlogo">
@@ -25,64 +25,65 @@
         </div>
     </div>
 
-    <div class="main qingchun2">
-        <div class="main-content">
+    <div class="main ">
+        <div class="main-content" style="">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-1">
-                    </div>
-                    <div class="col-md-10">
-                        <div>
+                <div class="">
+
+                    <div id="image_gallery" class="" style="width: 85%; margin: 0 auto;">
+                        <div style="padding: 0 5px 15px;">
                             <h2><font color="white">团组织建设</font></h2>
-                            <img src="./images/tiao_03.png" class="" style=" height: 10px; width: 200px;">
+                            <img src="./images/tiao_03.png" class="" style=" height: 10px; width: 180px;">
                         </div>
-                        <div class="row">
-                            <div class="col-md-3">
-                                <a href="images/qingchun2/i1.jpg" data-lightbox="lightbox">
-                                    <img src="./images/qingchun2/i1s.jpg" class="" style=" "></a>
+                        <div class="grid" style="display:none;">
+                          <div class="clearfix">
+                              <div class="col-md-3">
+                                  <a href="images/qingchun2/i1.jpg" data-lightbox="lightbox">
+                                      <img src="./images/qingchun2/i1s.jpg" class="" style=" "></a>
+                              </div>
+                              <div class="col-md-3">
+                                  <a href="images/qingchun2/i2.jpg" data-lightbox="lightbox">
+                                      <img src="./images/qingchun2/i2s.jpg" class="" style=" "></a>
+                              </div>
+                              <div class="col-md-3">
+                                  <a href="images/qingchun2/i3.jpg" data-lightbox="lightbox">
+                                      <img src="./images/qingchun2/i3s.jpg" class="" style=" "></a>
+                              </div>
+                              <div class="col-md-3">
+                                  <a href="images/qingchun2/i4.jpg" data-lightbox="lightbox">
+                                      <img src="./images/qingchun2/i4s.jpg" class="" style=" "></a>
+                              </div>
                             </div>
-                            <div class="col-md-3">
-                                <a href="images/qingchun2/i2.jpg" data-lightbox="lightbox">
-                                    <img src="./images/qingchun2/i2s.jpg" class="" style=" "></a>
+                            <div class="clearfix">
+                              <div class="col-md-3">
+                                  <a href="images/qingchun2/i5.jpg" data-lightbox="lightbox">
+                                      <img src="./images/qingchun2/i5s.jpg" class="" style=" "></a>
+                              </div>
+                              <div class="col-md-3">
+                                  <a href="images/qingchun2/i6.jpg" data-lightbox="lightbox">
+                                      <img src="./images/qingchun2/i6s.jpg" class="" style=" "></a>
+                              </div>
+                              <div class="col-md-3">
+                                  <a href="images/qingchun2/i7.jpg" data-lightbox="lightbox">
+                                      <img src="./images/qingchun2/i7s.jpg" class="" style=" "></a>
+                              </div>
+                              <div class="col-md-3">
+                                  <a href="images/qingchun2/i8.jpg" data-lightbox="lightbox">
+                                      <img src="./images/qingchun2/i8s.jpg" class="" style=" "></a>
+                              </div>
                             </div>
-                            <div class="col-md-3">
-                                <a href="images/qingchun2/i3.jpg" data-lightbox="lightbox">
-                                    <img src="./images/qingchun2/i3s.jpg" class="" style=" "></a>
-                            </div>
-                            <div class="col-md-3">
-                                <a href="images/qingchun2/i4.jpg" data-lightbox="lightbox">
-                                    <img src="./images/qingchun2/i4s.jpg" class="" style=" "></a>
+                            <div class="clearfix">
+                              <div class="col-md-3">
+                                  <a href="images/qingchun2/i9.jpg" data-lightbox="lightbox">
+                                      <img src="./images/qingchun2/i9s.jpg" class="" style=" "></a>
+                              </div>
+                              <div class="col-md-3">
+                                  <a href="images/qingchun2/i10.jpg" data-lightbox="lightbox">
+                                      <img src="./images/qingchun2/i10s.jpg" class="" style=" "></a>
+                              </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-3">
-                                <a href="images/qingchun2/i5.jpg" data-lightbox="lightbox">
-                                    <img src="./images/qingchun2/i5s.jpg" class="" style=" "></a>
-                            </div>
-                            <div class="col-md-3">
-                                <a href="images/qingchun2/i6.jpg" data-lightbox="lightbox">
-                                    <img src="./images/qingchun2/i6s.jpg" class="" style=" "></a>
-                            </div>
-                            <div class="col-md-3">
-                                <a href="images/qingchun2/i7.jpg" data-lightbox="lightbox">
-                                    <img src="./images/qingchun2/i7s.jpg" class="" style=" "></a>
-                            </div>
-                            <div class="col-md-3">
-                                <a href="images/qingchun2/i8.jpg" data-lightbox="lightbox">
-                                    <img src="./images/qingchun2/i8s.jpg" class="" style=" "></a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-3">
-                                <a href="images/qingchun2/i9.jpg" data-lightbox="lightbox">
-                                    <img src="./images/qingchun2/i9s.jpg" class="" style=" "></a>
-                            </div>
-                            <div class="col-md-3">
-                                <a href="images/qingchun2/i10.jpg" data-lightbox="lightbox">
-                                    <img src="./images/qingchun2/i10s.jpg" class="" style=" "></a>
-                            </div>
-                        </div>
-                        <div class="swiper swiper-container">
+                        <div class="swiper swiper-container" style="padding: 0 5px;">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide"><img src="images/qingchun2/i1.jpg"></div>
                                 <div class="swiper-slide"><img src="images/qingchun2/i2.jpg"></div>
@@ -93,19 +94,19 @@
                                 <div class="swiper-slide"><img src="images/qingchun2/i7.jpg"></div>
                                 <div class="swiper-slide"><img src="images/qingchun2/i8.jpg"></div>
                                 <div class="swiper-slide"><img src="images/qingchun2/i9.jpg"></div>
-                                <div class="swiper-slide"><img src="images/qingchun2/i10s.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i10.jpg"></div>
+                                <div class="swiper-slide"><img src="images/qingchun2/i1.jpg"></div>
                             </div>
                         </div> <!--swiper end-->
                     </div> <!--col-md-10 end-->
-                    <div class="col-md-1">
-                    </div>
+
                 </div>
 
             </div><!--container end-->
 
         </div> <!--main-content end-->
 
-    </div> <!--main qingchun2 end-->
+    </div> <!--main  end-->
 
 </div>
 
@@ -121,12 +122,12 @@
 
         <div class="col-md-9 rightpart">
             <div class="pull-right">
-                <a class="back-btn ctl_btn" href="1_jiandang.html"> 返回 </a>
+              <a class="back-btn ctl_btn" href="1_1_qingchun.html?noaudio=1" > 返回 </a>
                 <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
-                <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up"
+                <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-off"
                                                                                   aria-hidden="true"></span> </a>
-                <audio id="audio-js" class="audio-js">
-                    <source src="audios/tss/锦江宾馆.ogg" type="audio/ogg"/>
+                <audio id="audio-js" class="audio-js" loop='loop'  autoplay="autoplay">
+                    <source src="audios/qingchun/组织建设-青年团之歌.ogg" type="audio/ogg"/>
                 </audio>
             </div>
         </div>
