--- a/1_1_qingchun.html
+++ b/1_1_qingchun.html
@@ -15,7 +15,7 @@
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<div class="page zhigong1 tdc-detail">
+<div class="page tdc-detail">
     <div class="container">
         <div class="logo"><img src="./images/tdc_logo.png"></div>
         <div class="row" id="zlogo">
@@ -52,7 +52,7 @@
                             <li style="margin-right: 100px;"><a href="./1_1_qingchun1.html" class="image-wrapper">
                                 <div class=""><img src="./images/qingchun/i1.png" class="img-fullw"
                                                    style="background-color:#187FC3;"></div>
-                                <p> 工会组织架构 </p>
+                                <p> 团组织架构 </p>
                             </a></li>
 
                             <li><a href="./1_1_qingchun2.html" class="image-wrapper">
@@ -94,7 +94,7 @@
                 <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up"
                                                                                   aria-hidden="true"></span> </a>
                 <audio id="audio-js" class="audio-js">
-                    <source src="audios/zhigong/职工之家.ogg" type="audio/ogg"/>
+                    <source src="audios/qingchun/青春风采.ogg" type="audio/ogg"/>
                 </audio>
             </div>
         </div>
