--- a/1_1_qingchun1.html
+++ b/1_1_qingchun1.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>铁越集团</title>
+  <title>团组织架构-铁越集团</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
@@ -15,7 +14,7 @@
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div class="page zhigong1 tdc-detail">
+  <div class="page  tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -29,82 +28,40 @@
       <div class="main-content">
 
         <div class="row" id="wlsp">
+          <div class="col-md-12 leftpart">
+            <div class="titlepart" style="width:25%">
+              <h3>团组织架构</h3>
+
+            </div>
+            <div style="width:100%;text-align:center">
+              <img src="./images/qingchun1/i1.png" style="width:70%;margin-top:40px;">
+            </div>
+          </div>
+        </div>
+      </div>
+      <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+        <div class="content">
           <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>青春风采</h3>
-              
-            </div>
-
-            <div class=" bodypart" style="background: transparent;">
-              <p class="desc typing-ani" style="background:transparent">
-                <span class="text">青春风采 无悔青春！！！青春风采 无悔青春！！！。
-                </span>
-              </p>
-            </div>
-
           </div>
+
           <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <ul class="jiandanglist1">
-                <li><a href="./1_1_zhigong3.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_06.png" class="img-fullw" style="background-color:#187FC3"></div>
-                  <p> 工会组织架构 </p>
-                </a>
-                </li>
-                <li><a href="./qingchun2.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_09.png" class="img-fullw"></div>
-                  <p> 团组织建设 </p>
-                </a></li>
+            <div class="pull-right">
+              <a class="back-btn ctl_btn" href="1_1_qingchun.html?noaudio=1" > 返回 </a>
+              <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
 
-                <!--<li><a href="./1_1_zhigong2.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_03.png" class="img-fullw"></div>-->
-                  <!--<p> 帮扶救助 </p></a>-->
-                <!--</li>-->
-                <li style="clear:both"><a href="./1_1_zhigong6.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_15.png" class="img-fullw"></div>
-                  <p> 团员阵地 </p></a>
-                </li>
-                <li><a href="./1_1_zhigong5.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_18.png" class="img-fullw"></div>
-                  <p> 团员活动 </p></a>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
-      </div>
+      </nav>
+
     </div>
-  </div>
-    <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+    <script src="Scripts/jquery-1.9.1.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="1_jiandang.html" > 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/zhigong/职工之家.ogg" type="audio/ogg" />
-            </audio>
-          </div>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Modal -->
-
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
-
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
-</body>
-</html>
+    <script src="Scripts/swiper.jquery.min.js"></script>
+    <script src="Scripts/swiper.animate.min.js"></script>
+    <script src="Scripts/video.js"></script>
+    <script src="Scripts/lightbox.min.js"></script>
+    <script src="Scripts/app.js"></script>
+  </body>
+  </html>
